[package]
name = "phos-data-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DATA Network light-client integration for Phos"

[features]
default = ["tls-native-roots"]
tls-native-roots = ["reqwest/rustls-tls-native-roots"]
tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]

[dependencies]
alloy.workspace = true
async-trait = "0.1"
cometbft = { version = "0.1.0-alpha.2", default-features = false, features = ["rust-crypto"] }
cometbft-rpc = { version = "0.1.0-alpha.2", default-features = false, features = ["reqwest"] }
eyre = "0.6"
figment = { version = "0.10.7", features = ["toml", "env"] }
helios-common = { package = "phos-helios-common", version = "0.11.1" }
helios-core = { package = "phos-helios-core", version = "0.11.1" }
helios-exex-data-network-proto.workspace = true
helios-exex-data-network-precompiles.workspace = true
helios-exex-light-client = { workspace = true, features = ["secp256k1"] }
helios-revm-utils = { package = "phos-helios-revm-utils", version = "0.11.1" }
prost.workspace = true
reqwest = { version = "0.11.20", default-features = false }
revm.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "5.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
